# tn-sdk-python

./: .gitignore  LICENSE  README.md  pyproject.toml  sonar-project.properties  tox.ini
.github/workflows/: build.yml  publish.yml
src/tn_sdk/: __init__.py
src/tn_sdk/core/: __init__.py  enums.py  tn_api.py
src/tn_sdk/exceptions/: __init__.py  exceptions.py
src/tn_sdk/tests/: test_dummy_for_sonar.py  test_prepare_data_for_generate_solutions.py  test_tn_api.py
src/tn_sdk/tests/test_tn_api/: base_tn_api_test.py  test_en_api_request.py  test_tn_api_fetch_new_credentials_from_api.py  test_tn_api_intialization.py  test_tn_api_load_token_from_dis.py  test_tn_api_prepare_data_for_generate_solutions.py  test_tn_api_save_credentials_to_disk.py
src/tn_sdk/utils/: constants.py  validators.py
